# Matrix-cplusplus

./: CMakeLists.txt  CPack.cmake  README.md  input.txt
.github/workflows/: CI.yml  CI_release.yml  cmake1.yml
matrix_application/: CMakeLists.txt  matrix.cpp
matrix_lib/: CMakeLists.txt  Cmatrix.cpp  Cmatrix.h  cmatrix.cpp  cmatrix.h
tests/: cmatrix.h  tests.cpp
